# Luo-Rudy-1994

./: Makefile.am  Makefile.in  README  configure  temp
src/: exptable.c  input_para.c  ion_current.c  lrd94.c  mem.c  syspara.h  system.c  val_constants.c
test/: in
